--- a/PTcontactos.css
+++ b/PTcontactos.css
@@ -1,12 +1,17 @@
 
 /* Body e tipografia */
+html {transition: 0.4s ease;}
 body {
     font-family: "Syne Mono", monospace;
     font-weight: 200;
     background-color: rgb(0, 0, 0);
     padding: 3%;
     color: white;
+         
 }
+
+html:has(.back-text a:hover){filter: grayscale(1)}
+
 
 .back-text {display: block;
   top: 30px;
