--- a/PTstyle.css
+++ b/PTstyle.css
@@ -28,6 +28,11 @@ h2 {
     font-size: 4vw; 
 }
 
+.iararamos {background-color: #000000; color: white; text-decoration: none; transition: 0.6s ease;}
+
+.iararamos:hover {font-size: 3.5vw;}
+
+
 /* Layout principal */
 .eye-layout {
     display: flex;
@@ -85,7 +90,10 @@ h2 {
     position: relative;
     width: 40vw;
     aspect-ratio: 3 / 2;
+        transition: 0.62s ease-out;
 }
+
+
 
 .eye img {
     position: absolute;
@@ -140,11 +148,16 @@ h2 {
   font-size: 25px;
   font-weight: bold;
   color: white;          /* muda se quiser outra cor */
-  z-index: 100;          /* acima de outros elementos */
+  z-index: 5;          /* acima de outros elementos */
   cursor: pointer;       /* opcional: se quiser que pareça clicável */
   user-select: none;    
   background-color: black; /* impede seleção */
+  transition: ease 0.5s;
+  transform-origin: center;    
 }
+
+.contact-text:hover {top: 27px;}
+
 
 /* ===== GALERIA 3D FLUTUANTE ===== */
 /* ===== GALERIA 3D FLUTUANTE ===== */
@@ -222,16 +235,6 @@ h2 {
 @keyframes glow {
   0% { opacity: 0.5; transform: scale(1); }
   100% { opacity: 0.8; transform: scale(1.05); }
-}
-
-.changelgs {
-  position: fixed;       /* fixa o ícone no ecrã, mesmo com scroll */
-  top: 20px;             /* mesma altura vertical do "CONTACTOS" */
-  right: 170px;          /* ajusta a distância — deixa espaço antes do texto */
-  width: 32px;           /* tamanho consistente */
-  height: 32px;
-  cursor: pointer;
-  z-index: 100;
 }
 
 
