--- a/contactos.css
+++ b/contactos.css
@@ -1,12 +1,16 @@
 
 /* Body e tipografia */
+html {transition: 0.4s ease;}
 body {
     font-family: "Syne Mono", monospace;
     font-weight: 200;
     background-color: rgb(0, 0, 0);
     padding: 3%;
     color: white;
+         
 }
+
+html:has(.back-text a:hover){filter: grayscale(1)}
 
 .back-text {display: block;
   top: 30px;
@@ -36,6 +40,8 @@ p {font-size: 2vw;}
 
 svg {width: 2vw; color: white;}
 
+a {color: white; text-decoration: none ;}
+
 .changelgs {
   position: fixed;       /* fixa o ícone no ecrã, mesmo com scroll */
   top: 20px;             /* mesma altura vertical do "CONTACTOS" */
@@ -46,7 +52,7 @@ svg {width: 2vw; color: white;}
   z-index: 5;
 }
 
-a {color: white; text-decoration: none ;}
+
 
 .flag-container {
   position: fixed; /* flutua sobre o layout */
