--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ h2 {
     font-size: 4vw; 
 }
 
+.iararamos {background-color: #000000; color: white; text-decoration: none; transition: 0.6s ease;}
+
+.iararamos:hover {font-size: 3.5vw;}
+
 /* Layout principal */
 .eye-layout {
     display: flex;
@@ -85,6 +89,7 @@ h2 {
     position: relative;
     width: 40vw;
     aspect-ratio: 3 / 2;
+        transition: 0.62s ease-out;
 }
 
 .eye img {
@@ -140,11 +145,15 @@ h2 {
   font-size: 25px;
   font-weight: bold;
   color: white;          /* muda se quiser outra cor */
-  z-index: 100;          /* acima de outros elementos */
+  z-index: 5;          /* acima de outros elementos */
   cursor: pointer;       /* opcional: se quiser que pareça clicável */
   user-select: none;    
   background-color: black; /* impede seleção */
+  transition: ease 0.5s;
+  transform-origin: center;    
 }
+
+.contact-text:hover {top: 27px;}
 
 /* ===== GALERIA 3D FLUTUANTE ===== */
 /* ===== GALERIA 3D FLUTUANTE ===== */
