--- a/PTportstyle.css
+++ b/PTportstyle.css
@@ -1083,7 +1083,7 @@ filter: grayscale(100%);
   width: 70%;
   height: 80%;
   transform: translateX(-50%);
-  background-image: url(assets/tv\ grain.gif);
+  background-image: url(assets/tvgrain.gif);
   background-size: 200%;
   background-repeat: no-repeat;
   color: white;
